went over all text and edited mistakes

--- a/worldbuilding/characters/flesh-shaper.html
+++ b/worldbuilding/characters/flesh-shaper.html
@@ -7,18 +7,18 @@
         <h1>Flesh Shaper</h1>
         
         <p>Race: Flesh Shaper (Savage, Loner, more akin to wild animal with sapience)</p>
-        <p>> Can change shape on will, changes are simple in difference or into simple forms.</p>
+        <p>> Can change shape at will, results are rarely complex in nature, like shaping clay with your hands.</p>
         <p>> Limited intelligence makes forms unrefined and simple, like size changes, clubs for arms, spikes etc.</p>
         <p>>> Higher awareness of how they work increases form options. (Learning with help of spirit shaman)</p>
         <p>Body consists of biological fluid / cell soup, hardening and reshaping depending on form.</p>
-        <p>Actual being is not body itself, but a spirit "elemental" that lacks awareness of this fact.</p>
+        <p>Actual creature is not the body itself, but a spirit "elemental" that lacks awareness of this fact.</p>
         <p>Body can increase in size as more biological material is taken in and converted.</p>
-        <p>> Rate of conversion depends on target material, quicker to more biological it already is (->cell soup structure).</p>
+        <p>> Rate of conversion depends on target material, quicker the more biological that material it already is (->cell soup structure).</p>
         <p>> Rate is capped by current body mass / surface area available to convert.</p>
         <p>>> Conversion can be achieved with any amount of contact, but taking the material into the body mass is recommended due to higher surface area.</p>
         <p>> Body mass can be rejected at will, such material will dry out and has to be re-converted based on time passed since rejection.</p>
-        <p>Creature can regenerate from any amount body left as long as the body can functionally support awareness.</p>
-        <p>> The require amount of body mass depends on the awareness of the creatures condition (spirit elemental).</p>
+        <p>Creature can regenerate from any amount of body left as long as the body can functionally support awareness.</p>
+        <p>> The required amount of body mass depends on the awareness of the creatures condition (spirit elemental).</p>
         <p>>> At full awareness, the creature can regenerate without any body at all, at a slower rate, making it immortal by any means outside of the spirit domain.</p>
         <br>
         <p>Character Development: Becoming aware of it's condition with the help of a spirit shaman.</p>
