--- a/worldbuilding/characters/gnoll_spirit-shaman.html
+++ b/worldbuilding/characters/gnoll_spirit-shaman.html
@@ -6,8 +6,8 @@
     <body>
         <h1>Gnoll Spirit Shaman</h1>
         
-        <p>yeah, mostly see the spirit magic page</p>
+        <p>Yeah, mostly see the spirit magic page.</p>
         <br>
-        <p>backstory and others to follow</p>
+        <p>Backstory and others to follow.</p>
     </body>
 </html>
