--- a/worldbuilding/characters/goat_void-sick_fire-mage.html
+++ b/worldbuilding/characters/goat_void-sick_fire-mage.html
@@ -8,16 +8,16 @@
         
         <p>Race: Goat (find some more interesting name?)</p>
         <p>(move to separate page)</p>
-        <p>> Race are guardian of volcanoes, inherently skilled in fire magic, keep balance and prevent eruption</p>
-        <p>> understand importance of destruction and regrowth of nature</p>
-        <p>> value restraint and training / self improvement , society made of different orders , value tradition</p>
+        <p>> Race are guardians of volcanoes, inherently skilled in fire magic, keep balance and prevent eruption.</p>
+        <p>> Understand importance of destruction and regrowth of nature.</p>
+        <p>> Value restraint and training / self improvement , society made of different orders , value tradition.</p>
         <br>
-        <p>void-sick: as per separate page, drains arcane energy from surroundings to sustain self, passively, stronger the more energy is missing , drain can be increased/decreased with focus</p>
-        <p>> this works against the social environment he lives in, snuffing out fires and disrupting balance</p>
+        <p>Void-sick: as per separate page, drains arcane energy from surroundings to sustain self, passively, stronger the more energy is missing , drain can be increased/decreased with focus.</p>
+        <p>> This works against the social environment he lives in, snuffing out fires and disrupting balance.</p>
         <p>> (notorious with his people? barely tolerated , repeatedly tried to be re-integrated , outcast / trouble-maker , bad understanding of people?)</p>
-        <p>> Can be used in tandem with fire magic</p>
-        <p>>> Void to fill arcane energies until full (passive energy loss) , void attacks less powerful the more energy is consumed</p>
-        <p>>> Fire Magic to use up arcane energy, enabling (again) stronger void siphoning , potentially dangerous at low energy levels (physical damage to body if energy insufficient)</p>
+        <p>> Can be used in tandem with fire magic:</p>
+        <p>>> Void to fill arcane energies until full (passive energy loss), void attacks less powerful the more energy is consumed.</p>
+        <p>>> Fire Magic to use up arcane energy, enabling (again) stronger void siphoning, potentially dangerous at low energy levels (physical damage to body if energy insufficient).</p>
         <p>Nickname with his people? -> snuffing out candles?</p>
     </body>
 </html>
