--- a/worldbuilding/characters/opossum_illusionist.html
+++ b/worldbuilding/characters/opossum_illusionist.html
@@ -7,22 +7,24 @@
         <h1>Opossum Illusionist</h1>
         
         <p>Race: Opossum (find more interesting name?)</p>
-        <p>> skittish , doesn't like being around people , natural Illusionists or other</p>
-        <p>> race prefers own company, only ventures out to scavenge, afraid of other races</p>
+        <p>> Skittish, doesn't like being around people , natural Illusionists or other.</p>
+        <p>> Race prefers own company, only ventures out to scavenge, afraid of other races.</p>
         <br>
-        <p>terrible self esteem , self worth , general anxiety , potentially physically unhealthy levels</p>
-        <p>loner, away from own race, full time fake mask</p>
-        <p>uses illusion magic to disguise self , "wears a mental mask" has different, fake personality based on current illusion, changes outward confidence</p>
-        <p>panic when illusion is broken or can be seen through</p>
-        <p>takes a lot of time to warm up to people, needs to learn to be ok with people seeing them without illusions</p>
-        <p>> only for friends, will keep up illusions for general public</p>
-        <p>Prefers overly confident mask, as a total swap of actual personality</p>
+        <p>Terrible self esteem , self worth , general anxiety , potentially physically unhealthy levels.</p>
+        <p>Loner, away from own race, full time fake "mask".</p>
+        <p>Uses illusion magic to disguise self , "wears a mental mask" has different, fake personality based on current illusion, changes outward confidence.</p>
+        <p>Panic when illusion is broken or can be seen through.</p>
+        <p>Takes a lot of time to warm up to people, needs to learn to be okay with people seeing them without illusions.</p>
+        <p>> Only for friends, will keep up illusions for general public.</p>
+        <p>Prefers overly confident mask, as a total swap of actual personality.</p>
         <br>
-        <p>Illusions work on a per person basis, and has to be focused individually, more targets the less effective the illusion</p>
-        <p>> avoids crowds</p>
-        <p>Can see (domain sight) attention levels of people and can base illusion shape and quality based on that</p>
-        <p>Magic affects people's perception of reality and is both physical and arcane, drift to arcane (mind)</p>
-        <p>Can be used to "white out" people, making their entire perception white and empty, effectively putting them into a coma , as every illusion needs focus , demanding magic</p>
-        <p>Illusions are not only visual but can be applied to any sense, at addition focus cost</p>
+        <p>Illusions work on a per person basis, and has to be focused individually, more targets the less effective the illusion.</p>
+        <p>> Avoids crowds.</p>
+        <p>> Illusions cost less focus per individual person in a crowd, as they individually pay less attention to her, worse quality illusion is sufficient.</p>
+        <p>Can see (domain sight) attention levels of people and can base illusion shape and quality based on that.</p>
+        <p>Magic affects people's perception of reality and is both physical and arcane, drift to arcane (mind).</p>
+        <p>Can be used to "white out" people, making their entire perception white and empty, effectively putting them into a coma.</p>
+        <p>  As every illusion needs focus, demands constant magic.</p>
+        <p>Illusions are not only visual but can be applied to any sense, at addition and focus cost.</p>
     </body>
 </html>
