--- a/worldbuilding/magic/focus.html
+++ b/worldbuilding/magic/focus.html
@@ -23,7 +23,7 @@
         <p>- function, purpose and additional notes (depending on preference)</p>
         <p>Indexes are usually cast as meta-magic in addition with the base effect, interwoven with it, so when one disappears, the other does as well.</p>
         <br>
-        <p>Indexes can take any shape and can even be invisible.</p>
+        <p>Indexes can take any shape and can even be invisible to the "normal / physical" eye.</p>
         <p>Given that they are supposed to be an aid for the mage, indexes are usually visible in the physical sphere, for highest comfort.</p>
         <p>While the look of a given index is up to each mage, certain common practices have been established over time.</p>
         <br>
@@ -31,7 +31,7 @@
         <p>This disk is usually floating and rotating around it's center, "worn" on a mages arm, horn or tail, whichever is convenient.</p>
         <br>
         <p>The script on indexes is readable to all, as normal script would be, it is thereby commonplace to invent personal shorthands or cyphers.</p>
-        <p>This is done to stop possible unwanted interaction with the magic through other mages.</p>
+        <p>This is done to stop possible unwanted interaction from other mages.</p>
         <br>
         <h2>Offloading</h2>
         <p>Given a reasonably sophisticated index, about any magic effect can be offloaded.</p>
