--- a/worldbuilding/magic/overview.html
+++ b/worldbuilding/magic/overview.html
@@ -10,7 +10,7 @@
         <p>When talking about the dimension of a certain sphere, it may also be called a plane (of existence).</p>
         <br>
         <p>A typical person will have a body comprised of a physical, spirit and soul presence, while only being able to see physical with their eyes.</p>
-        <p>While many races are born with a natural aptitude for casting magic of certain spheres, as long as a person has a presence or "body" in that sphere.</p>
+        <p>While many races are born with a natural aptitude for casting magic of certain spheres, as long as a person has a presence or "body" in that sphere they may learn to use magic from that sphere.</p>
         <br>
         <p>It is to be noted that in general, magic from one sphere cannot directly interact with magic or objects in another sphere. On the other hand, most objects exist in many spheres, by different presences, in addition to the fact that the arcane sphere intersects with other spheres quite heavily. </p>
         <p>An example would be a fire spell, mostly comprised of arcane magic, still affecting wood, an object with no arcana presence. The magic in this case translates energy from the arcane into the physical, resulting in chaotic and often hard to control fire.</p>
@@ -35,10 +35,12 @@
         
         <p>Secondary spheres are comprised of a mix of multiple primary spheres. They do not have sub-dimensions and cannot create elementals.</p>
         <p>Strictly speaking, secondary spheres are more akin to conventions in magic use, rather than their own entities.</p>
-        <p>The common populous might call beings of multiple spheres "elementals" as long as none of those spheres include physical, due to a lack of magical understanding and the fact that they appear "invisible" to the naked eye.</p>
+        <p>The common populous might call beings of multiple spheres "elementals" as long as none of those spheres include physical, due to a lack of their magical understanding or formal education.</p>
+        <p>A fire "elemental" might be incorrectly called an elemental, because they seem to be compromised of only fire, yet they exist both in the Physical and the Arcane.</p>
+        <br>
         <p>These spheres exist only as categories for the common folk and only vaguely describe their sphere-composition.</p>
         <br>
-        <p><a href="./spheres/elemental.html">Elemental (Arcane/Physical)</a></p>
+        <p><a href="./spheres/elemental.html">Elemental (Arcane/Physical)</a>, called as such for the "Fire, Water, Wind and Earth" elements, people use to describe the world. Not an academic name.</p>
         <p><a href="./spheres/mind.html">Mind (Arcane/Physical)</a></p>
         <p><a href="./spheres/void.html">Void (Arcane, mutation)</a></p>
         <p><a href="./spheres/necromancy.html">Necromancy (Arcane/Physical/Soul)</a></p>
@@ -51,6 +53,6 @@
         <p><a href="./crystals.html">Crystals</a></p>
         <p>Crystallized magical energy, stored for later use or as a reagent.</p>
         <p><a href="./focus.html">Focus</a></p>
-        <p>Object or practice to offload maintaining magic onto a certain object.</p>
+        <p>Object maintaining magic, or practice to offload maintaining magic onto a certain object.</p>
     </body>
 </html> 
