--- a/worldbuilding/magic/spheres/physical.html
+++ b/worldbuilding/magic/spheres/physical.html
@@ -7,8 +7,8 @@
         <h1>Physical Plane</h1>
         <p>Also called the "plane of the body", the "flesh plane", the "normal plane" or the "force plane" to practitioners of force magic.</p>
         <p>While not all creatures exist on the physical plane, it is very likely that you are one, and therefore will only encounter other creatures that also live there.</p>
-        <p>The physical plane works like you would expect with many of the rules according to the real world.</p>
-        <p>It is the plane most creatures perceive easiest,the only sphere non-mages can see, and the plane most people assume to be the base of life.</p>
+        <p>The physical plane works like you would expect with many of the rules according to the "real world".</p>
+        <p>It is the plane most creatures perceive easiest, the only sphere non-mages can see, and the plane most people assume to be the base of life.</p>
         <p>The Physical is very low in magical energy, in contrast to all others, and most people assume you cannot cast magic in the physical plane at all.</p>
         <br>
         <h2>Force Magic</h2>
@@ -24,7 +24,7 @@
         <p>The second group to discover force magic was a group of arcane mages wanting to imitate what the monks could do.</p>
         <p>Force magic cast firstly through the arcane is much easier to learn and potentially more powerful, given the ease of access to arcane energy.</p>
         <br>
-        <p>Bodily force magic is manly "used" to enhance one's body, strengthening muscles or hardening skin.</p>
+        <p>Bodily force magic is mainly "used" to enhance one's body, strengthening muscles or hardening skin.</p>
         <p>It's main drawback are the difficulty of mastering it as well as it's short range, and thereby limited use.</p>
         <p>Force magic is not precise and hard to maintain, even with training.</p>
         <p>In combat it is best used to enhance one's body, deflect blows, create short-range "weapons or barriers.</p>
@@ -37,6 +37,8 @@
         <p>Although any such effects require immense amounts of focus, it is best to search a healer quickly.</p>
         <br>
         <p>The arcane-fueled use of force magic is as mentioned previously easier and more powerful, with the drawback of the cast being visible to the arcane this way.</p>
-        <p>There isn't much use for such a imprecise and short-range magic usually, most mages that specialize on it do so for personal reasons mostly.</p>
+        <p>There isn't much use for such a imprecise and short-range magic usually, most mages that specialize in it do so for personal reasons mostly.</p>
+        <p>Directing "pure" force magic from the arcane, while possible, is far more costly and far less efficient than to use any other form of "impure" magic.</p>
+        <p>It is generally recommended to use Earth magic, for example, to create a barrier, than to use pure Force.</p>
     </body>
 </html>
