--- a/worldbuilding/characters/otter_monk.html
+++ b/worldbuilding/characters/otter_monk.html
@@ -7,18 +7,18 @@
         <h1>Otter Monk</h1>
         
         <p>Race: Otter (need more interesting name?)</p>
-        <p>> natural water mages, can use magic to breathe underwater (self only, natural instinct, based on magic competence)</p>
-        <p>> Island society / under-water cities, race personality depends highly on location, either self expression and being outgoing / playful or focused on tradition and restraint</p>
+        <p>> Natural water mages, can use magic to breathe underwater (self only, natural instinct, based on magic competence).</p>
+        <p>> Island society / under-water cities, race personality depends highly on location, either self expression and being outgoing / playful or focused on tradition and restraint.</p>
         <br>
-        <p>Grew up in social environment that valued fun and self expression ("as otters do")</p>
-        <p>Rejected this notion of his personality, as far as to suppress it entirely - will not be told what he should be</p>
-        <p>Wanders the world as a monk, trained under a different race, value self restraint, planning, few emotions and being level headed (as to oppose his upbringing)</p>
+        <p>Grew up in social environment that valued fun and self expression ("as otters do").</p>
+        <p>Rejected this notion of his personality, as far as to suppress it entirely - will not be told what he should be.</p>
+        <p>Wanders the world as a monk, trained under a different race, value self restraint, planning, few emotions and being level headed (as to oppose his upbringing).</p>
         <br>
-        <p>Natural with water magic, but does not use it extensively</p>
-        <p>Uses Force / Physical magic, both to enhance and better control his body, but also to create force barrier to deflect attacks and protect</p>
-        <p>> force magic requires high control and understanding of one's own body (if used like this)</p>
-        <p>> magic of this tradition is highly limited in range, best used only on the body of the user or at best to create short range weapons</p>
-        <p>> creating stationary barriers and maintaining them usually requires a second mage to cooperate</p>
-        <p>> force magic is night invisible even in the physical domain (normal sight) and can only be seen when the environment interacts with is (rain drops, mist, etc)</p>
+        <p>Natural with water magic, but does not use it extensively. (Part of the rejection of his former culture)</p>
+        <p>Uses Force / Physical magic, both to enhance and better control his body, but also to create force barrier to deflect attacks and protect.</p>
+        <p>> Force magic requires high control and understanding of one's own body (if used directly from the physical plane).</p>
+        <p>> Magic of this tradition is highly limited in range, best used only on the body of the user, or at best to create short range weapons.</p>
+        <p>> Creating stationary barriers and maintaining them usually requires a second mage helping.</p>
+        <p>> Force magic is nigh invisible even in the physical domain ("normal" sight) and can only be seen when the environment interacts with is (rain drops, mist, etc).</p>
     </body>
 </html>
