--- a/worldbuilding/magic/spheres/void.html
+++ b/worldbuilding/magic/spheres/void.html
@@ -10,7 +10,7 @@
         <p>It can thereby not be learned, although similar effects can be achieved using regular arcane magic.</p>
         <br>
         <p>A change in structure of the arcane presence makes an affected mage unable to store and regulate magic energy, draining their own energies to sustain themselves.</p>
-        <p>Void-sick mages are however highly dependent on arcane energy, a lack of will cause the following (in order):</p>
+        <p>Void-sick mages are however highly dependent on arcane energy, a lack of will cause the following , in order:</p>
         <p>- Fatigue</p>
         <p>- Inability to cast magic</p>
         <p>- Additional damage to the arcane presence, as it is starting to self-cannibalize</p>
@@ -24,7 +24,7 @@
         <br>
         <h2>Issues</h2>
         <p>Given an environment with average energy levels, this is not a problem on it's own.</p>
-        <p>The issue lies with that face, that the mere presence of a void-sick mage drains energies around them.</p>
+        <p>The issue lies with that fact, that the mere presence of a void-sick mage drains energies around them.</p>
         <p>This siphoning is undirected and can and will disrupt nearby magic forms and maintained effects, making it hard even for the mage themselves to cast magic.</p>
         <br>
         <p>Given this unpredictability, void mages are usually shunned by their social environment, even more so in societies that heavily rely on magic or employ complex magic.</p>
@@ -36,7 +36,7 @@
         <h2>Use as Magic</h2>
         <p>Void mages can learn to control their condition over time, while never being the master of it, as they rely on it for survival.</p>
         <p>With enough experience, void magic can be directed slightly, most commonly for a close range disruption of magic.</p>
-        <p>In more grim ways, void magic can also be used to cripple other arcane presences, so as to stop mages from casting at all, up to permanently.</p>
+        <p>In more grim ways, void magic can also be used to cripple other arcane presences, so as to stop mages from casting at all. If needed, forever.</p>
         <p>This doesn't result in more void mages, but will still cripple their arcane presence like you would cripple a limb.</p>
         <br>
         <p>More crafty void mages can make use of their condition in clever ways.</p>
