added some currently empty files and structures

--- a/worldbuilding/index.html
+++ b/worldbuilding/index.html
@@ -8,5 +8,6 @@
         <p><a href="./characters/overview.html">Characters</a></p>
         <p><a href="./races/overview.html">Races</a></p>
         <p><a href="./magic/overview.html">Magic</a></p>
+        <p><a href="./miscellaneous/">Miscellaneous</a></p>
     </body>
 </html>
