added gnoll race

--- a/worldbuilding/index.html
+++ b/worldbuilding/index.html
@@ -5,6 +5,14 @@
     </head>
     <body>
         <h1>Index</h1>
+
+        <br>
+        <h2>Notes:</h2>
+        <p>Phrases marked by " (( )) " are references to real word terminology and are "out-of-character".</p>
+        <p>These are usually used to facilitate the explanation of concepts, using familiar real world ideas.</p>
+        <p>These mentions do not prove the existance or non-existance of the given concept in regards to this world.</p>
+        <br>
+
         <p><a href="./characters/overview.html">Characters</a></p>
         <p><a href="./races/overview.html">Races</a></p>
         <p><a href="./magic/overview.html">Magic</a></p>
