--- a/worldbuilding/races/gnoll.html
+++ b/worldbuilding/races/gnoll.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Gnoll</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Gnoll</h1>
         
-        <p>TODO</p>
+        <h2>Appearance</h2>
+
+        <p>Gnolls are hyena-like, biped creatures, usually up to 8ft tall.</p>
+        <p>They share many characteristics with ((hyenas)), such as their fur pattern, head shape and diet.</p>
+        <br>
+        <p>Four general fur patterns can be observed, depending on region and clan:</p>
+        <p>((Spotted hyena)), ((striped hyena))/((aardwolf)), ((brown hyena)).</p>
+        <br>
+
+        <h2>Behavior</h2>
+        <p>Gnolls are naturally aggressive and brutish in nature, this is only amplified by the stereotypes other races have of them.</p>
+        <p>Even the most meek of gnoll will grow to an impressive stature with vastly more muscle mass than your average species.</p>
+        <br>
+        <p>While gnolls tend to be more aggressive and confrontational than most species, they are by no means dumb or mindless.</p>
+        <p>Gnolls are cunning, specifically in battle, well coordinated and strategic in groups.</p>
+        <p>While they usually die young and in battle, those that chose to live a more introspected life as the shaman of their tribe usually become wise elders.</p>
+        <br>
+
+        <h2>Society</h2>
+        <p>Each tribe or clan acts as one familial unit, while smaller units of closer friends are formed on an individual basis (usually 3-5 people).</p>
+        <p>Tribes have strict hierarchy, separated by sex.</p>
+        <br>
+        <p>Females lead each tribe and tend to be the most aggressive gnolls.</p>
+        <p>Their word is law, those who do not follow it, with actions or words, are swiftly and violently disposed of.</p>
+        <p>This also results in a strict separation of social groups, male and female gnolls do not mingle, unless it is demanded.</p>
+        <br>
+        <p>The leading female gnolls will regularly challenge each other's position in the hierarchy, the highest being the matriarch.</p>
+        <p>These confrontations usually end in blood or death.</p>
+        <p>Young female gnolls will be trained with this in mind, and those that show weakness or unwillingness die quickly.</p>
+        <p>As such, while the birthrates of each sex is about equal, females usually only amounts to about 5% of the entire gnoll population.</p>
+        <br>
+        <p>Male gnolls thus take care of any other role than leading.</p>
+        <p>Guards, scouts, traders, farmers, shamans, any other role has to be filled by them.</p>
+        <p>While directions from the matriarch are law, they are also somewhat rare, and thus many of the "lesser issues" are decided by those most experienced.</p>
+        <br>
+        <p>Most gnoll tribes are nomadic in nature, traveling from place to place as local resources dry up and come back in time.</p>
+        <p>The most common kind of gnoll lives in desert steppes or generally dry and rocky environments.</p>
+        <br>
+
+        <h2>Magic</h2>
+        <p>All gnolls are adapt at earth magic, their particular form usually depending on their environment.</p>
+        <p>Desert or steppes gnolls will use sand-based magic, to soothe or start sandstorm, or to blind enemies.</p>
+        <br>
+        <p>Fitting to their more aggressive nature, many gnoll tribes have a tradition of creating their weapons of choice from stone.</p>
+        <p>These weapons are usually makeshift in quality and summoned from the surrounding earth on demand, and later discarded as sand.</p>
+        <p>Even an unarmed gnoll is therefore never unarmed, particularly strong gnoll mages will even create and wield weapons far larger than what others would assume reasonable.</p>
+        <br>
+        <p>Every gnoll usually has their own preferred type of weapon they like to create, usually whatever they had been trained in as a child.</p>
+        <br>
+        <p>Shamans or other calmer gnolls will use their magic to help cultivate crops or make the land more fertile.</p>
+        <p>Particularly skilled mages may find themselves as novice healers and herbalists.</p>
+
     </body>
 </html>
