--- a/worldbuilding/magic/spheres/physical.html
+++ b/worldbuilding/magic/spheres/physical.html
@@ -7,7 +7,7 @@
         <h1>Physical Plane</h1>
         <p>Also called the "plane of the body", the "flesh plane", the "normal plane" or the "force plane" to practitioners of force magic.</p>
         <p>While not all creatures exist on the physical plane, it is very likely that you are one, and therefore will only encounter other creatures that also live there.</p>
-        <p>The physical plane works like you would expect with many of the rules according to the "real world".</p>
+        <p>The physical plane works like you would expect with many of the rules according to the ((real world)).</p>
         <p>It is the plane most creatures perceive easiest, the only sphere non-mages can see, and the plane most people assume to be the base of life.</p>
         <p>The Physical is very low in magical energy, in contrast to all others, and most people assume you cannot cast magic in the physical plane at all.</p>
         <br>
