--- a/worldbuilding/races/overview.html
+++ b/worldbuilding/races/overview.html
@@ -8,7 +8,7 @@
         
         <p>Currently ToDo, a bit of information can be gathered from some character pages for now.</p>
         <br>
-        <p><a href="./races/gnoll.html">Gnoll</a></p>
+        <p><a href="./gnoll.html">Gnoll</a></p>
         <p>> ~Opossum</p>
         <p>> ~Otter</p>
         <p>> ~Wolf</p>
