added the misc section, as well as icons for the primary spheres

--- a/worldbuilding/magic/spheres/divine.html
+++ b/worldbuilding/magic/spheres/divine.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <h1>Divine Magic</h1>
+        <img src="../../.images/Icon - Divine.png.png" alt="Icon Divine">
         
-        <p></p>
+        <p> </p>
     </body>
 </html>
