--- a/worldbuilding/magic/spheres/mind.html
+++ b/worldbuilding/magic/spheres/mind.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Mind Magic</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Mind Magic</h1>
         
         <p>TODO</p>
     </body>
