--- a/worldbuilding/magic/spheres/physical.html
+++ b/worldbuilding/magic/spheres/physical.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Physical Plane</h1>
+        <img src="../../.images/Icon - Force.png.png" alt="Icon Force">
+
         <p>Also called the "plane of the body", the "flesh plane", the "normal plane" or the "force plane" to practitioners of force magic.</p>
         <p>While not all creatures exist on the physical plane, it is very likely that you are one, and therefore will only encounter other creatures that also live there.</p>
         <p>The physical plane works like you would expect with many of the rules according to the ((real world)).</p>
