--- a/worldbuilding/miscellaneous/elemental_plague.html
+++ b/worldbuilding/miscellaneous/elemental_plague.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Elemental Plague</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Elemental Plague</h1>
         
-        <p>TODO</p>
+        <p>Stories tell of time before the plague, at this point, it has become normalcy for many societies.</p>
+        <p>Just as ebb and flow, or the changing seasons, the plague is a force of nature to them.</p>
+        <p>Yet the observant warn, it was never part of nature and it has only gotten worse.</p>
+        <br>
+        <p>The elemental plague is a phenomenon in which areas, first small, then larger, become infected by destabilizing energy.</p>
+        <p>It will start small, an anomaly about the size of a pearl.</p>
+        <p>Any mage capable of even the slightest magic can re-stabilize this occurrence, leaving a small shard of magic crystal for the fortunate.</p>
+        <br>
+        <p>The real danger lies in what happens when the anomaly isn't found, if it can grow.</p>
+        <p>This destabilized matter will slowly, then with more volume faster, infect the area around it, growing in size steadily.</p>
+        <p>An anomaly out in the wilderness, or any unpopulated area will first be noticed by it's main symptom.</p>
+        <p>Elementals.</p>
+        <p>Not in the academic sense, mind you, these elementals are manifestations of chaotic energy, and will usually span most if not all spheres.</p>
+        <p>Mindless manifestations, a walking avatar of chaos, their form a barely coherent mass.</p>
+        <p>These elemental will usually be made from the underlying magical energies as well as any physical object it could suck up from it's vicinity.</p>
+        <p>A vortex of water and plant-life in a swamp, a living sandstorm in a desert, a hulking giant of razor-sharp leaves and wood in a forest.</p>
+        <br>
+        <p>In order to stop the growth of such an anomaly the elemental it produced has to be destroyed, the chaotic energies calmed.</p>
+        <p>While fighting such an elemental is no easy feat and usually requires multiple people, depending on it's size,</p>
+        <p>calming the anomaly can still be done by about any mage.</p>
+        <p>This however is not a complete removal.</p>
+        <p>An anomaly that has produced it's first elemental is never really destroyed, only delayed.</p>
+        <p>Depending on the anomaly's size and your personal luck, it may not produce another one for years.</p>
+        <p>In other cases they have grown so large, that they produce multiple elementals daily, and even their growth can't be halted outside of special procedures.</p>
+        <br>
+        <p>For many cultures is has become part of their daily life then, to go out, find and destroy elementals.</p>
+        <p>It has come so far in fact, the many will take the magic crystals the elementals leave behind as currency to trade with.</p>
+        <p>A service of protection against other wares.</p>
+        <p>Even if not to trade, such crystals, while chaotic, can still be used as any other crystal of it's quality would.</p>
+        <p>Some even use them as decoration for their intricate and unique patters.</p>
     </body>
 </html>
