--- a/worldbuilding/miscellaneous/overview.html
+++ b/worldbuilding/miscellaneous/overview.html
@@ -6,6 +6,10 @@
     <body>
         <h1>Miscellaneous</h1>
         
-        <p>TODO</p>
+        <p>Here you will find any other information, that does not fit the other categories.</p>
+        <br>
+        <p><a href="./world.html">The world</a></p>
+        <p><a href="./elemental_plague.html">Elemental Plague</a></p>
+        <p><a href="./grand_designs.html">Grand Designs</a></p>
     </body>
 </html>
