--- a/worldbuilding/miscellaneous/world.html
+++ b/worldbuilding/miscellaneous/world.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>World</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>World</h1>
+        <p>It is no known, if the world people inhabit is a ((planet)), a flat surface, or if it even has an end.</p>
+        <p>People do not act enough on a global scale to exchange these kinds of information.</p>
+        <p>Regardless, no-one has found the worlds edge, or traveled from one side and arrived at the other.</p>
+        <br>
         
-        <p>TODO</p>
+        <h2>Astronomy</h2>
+        <p>Of the three celestial bodies in the sky, the first moon is probably the most impressive.</p>
+        <p>Hanging directly in the center of the sky, seemingly no matter your perspective, it will take a sizable chunk of your field of view, just because of it's size.</p>
+        <p>It does not move, it does not rotate and seems perfectly still.</p>
+        <p>Markings in the moon's surface can be used to tell north, east, west and south.</p>
+        <br>
+        <p>The first moon has a presence both in the spirit and soul plane as well.</p>
+        <p>It is both worshipped and feared by all necromancers for being the largest known source of crystalized soul.</p>
+        <p>Looking at it directly with a necromancer's soul sight is bound to blind them for life, so great is the sheer radiance of it.</p>
+        <p>In the spirit plane it is also the largest known source of spirit energy, the spirit sun.</p>
+        <p>It is considered controversial if it should be called an elemental or not.</p>
+        <br>
+        <p>Orbiting the first moon, is the much, much smaller second moon.</p>
+        <p>It is much less interesting from the perspective of the magical theory, not possessing any presence beside it's physical one.</p>
+        <p>The moon is however important for the daily lives of many people, one full orbit marking one month of time.</p>
+        <br>
+        <p>Lastly there is the sun, either much smaller than either of the moons, or that much farther away.</p>
+        <p>It's movement marks day and night, traveling in an "8" shape behind the first moon and back again.</p>
+        <p>While behind the moon, is it completely obscured, the only light available reflected from the second moon, depending on it's position.</p>
+        <br>
+        <p>The sun is also known to be the greatest source of arcane energy.</p>
+        <p>It is theorized that the mass of it inevitably affects the physical plane in it's most direct way, fire.</p>
+        
     </body>
 </html>
