--- a/worldbuilding/magic/spheres/arcane.html
+++ b/worldbuilding/magic/spheres/arcane.html
@@ -5,12 +5,15 @@
     </head>
     <body>
         <h1>Arcane Magic</h1>
+        <img src="../../.images/Icon - Arcane.png" alt="Icon Arcane">
+        
         <p>Arcane magic is the most versatile sphere, also called "the crossroads of magic".</p>
         <p>It easily mixes with other spheres and can manipulate any sphere to a moderate degree.</p>
         <br>
-        <p>Most races are born with an arcane presence in addition to the normal trifecta of physical,spirit and soul that their bodies are made from.</p>
+        <p>Most races are born with an arcane presence in addition to the normal trifecta of physical, spirit and soul that their bodies are made from.</p>
         <p>The arcane presence usually takes on a form of tentacles, spreading from a person's back and coiling around their body. With those, the individual can manipulate the arcane and create structures, resulting in arcane spells.</p>
-        <p>The form an arcane presence takes is somewhat malleable, reflecting what forms of magic the individual finds most intuitive or what they have trained most to cast.</p>
+        <p>A person's arcane presence, is as the name implies, entirely in the arcane, and thereby not visible to the "normal" eye.</p>
+        <p>The form it takes is somewhat malleable, reflecting what forms of magic the individual finds most intuitive or what they have trained most to cast.</p>
         <p>Individuals with an arcane presence are called mages, while colloquially any person able to cast magic is referred to as a mage, arcane or not.</p>
         <br>
         <p>As such, most people do not use arcane in it's pure form, instead using it to control the physical sphere from afar. This is colloquially called the elemental sphere, although it is usually referred to as one of it's specializations (Fire, Earth, Water, Wind, etc.).</p>
