--- a/worldbuilding/magic/spheres/arcane.html
+++ b/worldbuilding/magic/spheres/arcane.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>Arcane Magic</h1>
-        <img src="../../.images/Icon - Arcane.png" alt="Icon Arcane">
-        
+        <img src="../../.images/Icon_Arcane.png" alt="Icon Arcane">
+
         <p>Arcane magic is the most versatile sphere, also called "the crossroads of magic".</p>
         <p>It easily mixes with other spheres and can manipulate any sphere to a moderate degree.</p>
         <br>
