--- a/worldbuilding/magic/spheres/spirit.html
+++ b/worldbuilding/magic/spheres/spirit.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Spirit Magic</h1>
-        <img src="../../.images/Icon - Spirit.png.png" alt="Icon Spirit">
+        <img src="../../.images/Icon_Spirit.png.png" alt="Icon Spirit">
         
         <p>Spirit magic is weird in it's representation in common and even academic knowledge.</p>
         <p>For the vast majority of people, spirit magic and it's sphere don't exist. Curiously enough most people attribute, mistakenly, to soul what spirit offers.</p>
