--- a/worldbuilding/magic/spheres/divine.html
+++ b/worldbuilding/magic/spheres/divine.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Divine Magic</h1>
-        <img src="../../.images/Icon - Divine.png.png" alt="Icon Divine">
+        <img src="../../.images/Icon_Divine.png.png" alt="Icon Divine">
         
         <p> </p>
     </body>
