--- a/worldbuilding/magic/spheres/soul.html
+++ b/worldbuilding/magic/spheres/soul.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Soul</h1>
-        <img src="../../.images/Icon_Soul.png.png" alt="Icon Soul">
+        <img src="../../images/Icon_Soul.png" alt="Icon Soul">
         
         <p>The sphere of soul is said to harbor the essence of any being, that which lives on after death.</p>
         <p>This common misconception is one held by most people, even though they are not far off. Their concept of soul is reflected in the Spirit sphere instead.</p>
