--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>Minecraft 1.13 plugin to scale monster stats based on distance from spawn.</p>
 		<br>
 		<p><a href="https://www.dropbox.com/sh/fw9etiz5qmfnt2v/AAC3CvPysUbKSw9fcKObP-0Ga?dl=0">Doodles Archive</a></p>
-		<p>Dumb doodles of people, read the txt in dropbox for more info.</p>
+		<p>Dumb doodles of people, read the txt in Dropbox for more info.</p>
 		<br>
 		<p>--- --- ---</p>
         <h2>Tutorials</h2>
