--- a/worldbuilding/index.html
+++ b/worldbuilding/index.html
@@ -10,7 +10,7 @@
         <h2>Notes:</h2>
         <p>Phrases marked by " (( )) " are references to real word terminology and are "out-of-character".</p>
         <p>These are usually used to facilitate the explanation of concepts, using familiar real world ideas.</p>
-        <p>These mentions do not prove the existance or non-existance of the given concept in regards to this world.</p>
+        <p>These mentions do not prove the existence or non-existence of the given concept in regards to this world.</p>
         <br>
 
         <p><a href="./characters/overview.html">Characters</a></p>
